thêm khung cơ bản header và footer

--- a/src/components/products/Header/Header.scss
+++ b/src/components/products/Header/Header.scss
@@ -4,7 +4,7 @@
     align-items: center;
 
     .container-xxl {
-        background-color: aqua;
+        background-color: rgb(190, 196, 196);
         height:100px;
         padding-top: 25px;
     }
