--- a/src/pages/Products/ProductsItems.scss
+++ b/src/pages/Products/ProductsItems.scss
@@ -7,8 +7,9 @@
     justify-content: space-between;
 
     img {
-        width:250px;
-        height: 250px;
+        margin-top: 10px;
+        width:220px;
+        height: 220px;
 
     }
     .eye{
