--- a/src/pages/Home/Banner.scss
+++ b/src/pages/Home/Banner.scss
@@ -1,7 +1,9 @@
 @import '/src/pages/Style.scss';
 .banner {
+    position: relative;
     width: 1520px;
     max-width: calc( 100% - 20px);
+    // padding-bottom: 78px;
     margin-right: auto;
     margin-left: auto;
     margin-top: 24px;
@@ -105,14 +107,14 @@
     }
     &__featured {
         position: relative;
+        bottom: 0;
         z-index: 2;
         width: 91%;
+        margin-top: -52px;
         margin-right: auto;
         margin-left: auto;
-        // margin-top: -50px;
         background-color: #fff;
         border-radius: 8px;
-        transform: translateY(-50%);
     }
     &__featured-list {
         display: flex;
