--- a/src/pages/Products/ProductsItems.scss
+++ b/src/pages/Products/ProductsItems.scss
@@ -1,7 +1,7 @@
 .product__item {
     width: 248px;
     height: 340px;
-    margin-bottom: 15px;
+    // margin-bottom: 15px;
     display: flex;
     flex-direction: column;
     justify-content: center;
