--- a/src/pages/Products/Products.scss
+++ b/src/pages/Products/Products.scss
@@ -52,13 +52,19 @@
 .products__items-info {
     display: flex;
     flex-direction: column;
+    gap: 10px;
     flex: 1;
     justify-content: space-between;
-    padding: 12px 16px 16px 16px;
+    padding: 12px 16px 10px 16px;
 }
 .products__items-name {
     font-size: 1.6rem;
     font-weight: 400;
     line-height: 1.5;
     color: $color-items;
+}
+.products__items-price {
+    font-size: 1.5rem;
+    font-weight: 500;
+    line-height: 1.5;
 }
