--- a/src/pages/Style.scss
+++ b/src/pages/Style.scss
@@ -5,6 +5,7 @@ $primary-color: #00B207;
 $color-title: #0000;
 $warning-color: #FF8A00;
 $color-items: #4D4D4D;
+$line-clamp: 2;
 *,
 ::before,
 ::after {
@@ -27,4 +28,10 @@ body {
   max-width: calc(100% - 45px);
   margin-right: auto;
   margin-left: auto;
+}
+@mixin limited-text {
+    display: -webkit-box;
+    -webkit-line-clamp: $line-clamp;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
 }
