--- a/src/pages/Cart/CartCompact.scss
+++ b/src/pages/Cart/CartCompact.scss
@@ -1,17 +1,20 @@
 // Cart.scss
-
 .cart {
-    position: fixed;
-    top: 10px;
-    right: 5px;
-    width: 520px;
-    height: 95%;
-    padding: 20px;
-    transition: 0.3s right ease-out;
-    background-color: aliceblue;
-    // Styling
-    z-index: 10;
-    
+  position: fixed;
+  top: 0;
+  right: 0%;
+  width: 520px;
+  height: 100%;
+  background-color: white;
+  overflow-x: hidden;
+  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
+  transition: transform 0.3s ease-in-out;
+  transform: translateX(0%);
+  padding: 20px;
+
+  &.open {
+    transform: translateX(-100%);
+  }
     &.show {
       right: 10px;
     }
