--- a/src/pages/Home/Banner.scss
+++ b/src/pages/Home/Banner.scss
@@ -77,6 +77,8 @@
     }
     &__items-img-block {
         width: 820px;
+        height: 480px;
+        background-image: url('../../assets//image/bannens.png');
         img {
             width: 100%;
             object-fit: contain;
@@ -89,7 +91,7 @@
         align-items: center;
         justify-content: center;
         gap: 8px;
-        z-index: 12;
+        z-index: 5;
         width: 100%;
     }
     &__dots-items {
