--- a/src/pages/Products/Products.scss
+++ b/src/pages/Products/Products.scss
@@ -32,7 +32,7 @@
             background-color: rgba(0,0,0,.04);
             box-sizing: border-box;
             content: "";
-            height: 100%;
+            height: 240px;
             left: 0;
             position: absolute;
             top: -1px;
@@ -42,7 +42,7 @@
     }
     &--img {
         width: 100%;
-        height: 100%;
+        height: 240px;
         object-fit: cover;
         border-radius: inherit;
         z-index: 1;
