--- a/src/pages/Cart/CartCompact.scss
+++ b/src/pages/Cart/CartCompact.scss
@@ -173,7 +173,7 @@
     padding: 5px 0;
     text-align: center;
     &-count {
-      font-size: 1.6rm;
+      font-size: 1.6rem;
       font-weight: 500;
     }
     &-plus, &-minus {
