--- a/src/pages/Style.scss
+++ b/src/pages/Style.scss
@@ -96,6 +96,7 @@ body {
   font-size: 1.4rem;
   font-weight: 600;
   line-height: 45px;
+  text-align: center;
   color: #00B207;
   border-radius: 999px;
   transition: 0.3s ease-in-out;
