--- a/src/pages/Cart/Shop.scss
+++ b/src/pages/Cart/Shop.scss
@@ -1,7 +1,5 @@
 .container-xxl {
-  // display: flex;
-  // justify-content: space-around;
-
+  display: flex;
   .shopping-cart {
     min-height: 500px;
     align-items: center;
