--- a/src/pages/Cart/CartCompact.scss
+++ b/src/pages/Cart/CartCompact.scss
@@ -1,16 +1,18 @@
 
 .cart {
-  left: 1000px;
-  display: grid;
+  display: flex;
+  min-width: 500px;
   grid-template-rows: 20px 1fr 100px;
   position: fixed;
+  top:0%;
+  right: 0%;
   z-index: 999;
-  inset: 0 0 0 70%;
   padding: 20px 20px 10px 40px;
   background-color: #fff;
   border: 1px solid #ddd;
-  transform: translateX(100%);
   transition: ease-in-out 0.5s;
+  height :99%;
+
 
   &__modal {
     position: fixed;
@@ -161,11 +163,13 @@
   }
   
   &__checkout-btn {
-    background-color: blue;
+    width: 200px;
+    background-color: rgb(30, 255, 0);
     color: white;
     padding: 10px 20px;
     border: none;
     cursor: pointer;
+    border-radius: 5px;
   }
 }
 .cart.open {
@@ -173,5 +177,20 @@
 }
 
 
+.notification {
+  background-color: #4CAF50;
+  color: white;
+  padding: 10px;
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  border-radius: 5px;
+  opacity: 0;
+  z-index: 99;
+  transition: opacity 0.5s;
+}
 
+.show {
+  opacity: 1;
+}
 
