--- a/src/pages/Home/Banner.scss
+++ b/src/pages/Home/Banner.scss
@@ -76,13 +76,10 @@
         
     }
     &__items-img-block {
-        width: 820px;
+        width: 720px;
         height: 480px;
         background-image: url('../../assets//image/bannens.png');
-        img {
-            width: 100%;
-            object-fit: contain;
-        }
+        filter: drop-shadow(4px 2px 2px rgb(0, 0, 0));
     }
     &__dots-gr {
         position: absolute;
