--- a/src/pages/Products/ProductInfo.scss
+++ b/src/pages/Products/ProductInfo.scss
@@ -1,98 +1,112 @@
 .product-info {
-    width: 1000px ;
-    height:436px;
-    background-color: rgb(255, 255, 255);
-    box-shadow: 0 1px 1px rgba(0, 0, 0, 0.377);
-    z-index: 999;
-    position: fixed;
-    top:50%;
-    left:50%;
-    transform: translate(-50%,-50%);
-    border-radius: 10px;
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
-    .product-info--image{
-        img{
-            width: 350px;
-            height:350px;
-        }
-    }
-    .product-info--info{
-        justify-content: space-evenly;
-        padding:50px;
-        display: flex;
-        flex-direction: column;
-        height:556px;
-        .info-name{
-            font-size: 3rem;
-            font-weight: 500;
-        }
-        .info-price{
-            color:rgb(12, 205, 19);
-            font-size: 2.5rem;
+  width: 100%;
+  max-width: 500px;
+  height: auto;
+  background-color: #ffffff;
+  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
+  border-radius: 10px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 20px;
+  position: fixed;
+  top:50%;
+  left: 50%;
+  transform: translate(-50%,-50%);
+  z-index: 998;
+}
 
-        }
-        .info-des{
-            color:rgb(132, 132, 132);
-            font-size: 1.5rem;
+.product-info--image {
+  width: 100%;
+  max-width: 350px;
+  height: auto;
+  border-radius: 10px;
+}
 
-        }
-        .info-cart{
-            display: flex;
-            align-items: center;
-            justify-content: space-around;
+.product-info--info {
+  margin-top: 20px;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
 
-        }
-        .info-plus{
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            background-color: #F9F9F7;
-            border-radius: 20px;
-            width:100px;
-            height: 35px;
-            .plus-input {
-                    border-radius: 50%;
-                    border: 1px solid #c0c0c0;
-                    padding: 4px 7px;
-                    border:none; 
-                    background-color: #c0c0c0;   
+.info-name {
+  font-size: 2.5rem;
+  font-weight: 500;
+  margin-bottom: 10px;
+  text-align: center;
+}
 
-            &:nth-child(2){
-                border-radius: 4px;
-                padding: 4px 7px;
-                border:none;  
-                background-color: #F9F9F7;  
-      
-            }      
-        }
-    }
-        .info-btn {
-            z-index: 1000;
-            width: 150px;
-            height:50px;
-            background-color: #23ea2a;
-            border-radius:50px;
-            color:#F9F9F7;
-            font-size: 1.3rem;
-            display: flex;
-            align-items: center;
-            text-align: center;
-            justify-content: center;
-            gap: 10px;
-            border:none;
-            box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.685);
-            i{
-                font-size: 1.5rem;
-            }
-            &:hover{
-                background-color: #18ed1f;
-                box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.073);
+.info-price {
+  color: #0ccd13;
+  font-size: 2rem;
+  margin-bottom: 10px;
+}
 
-    
-            }
-        }
-    }
+.info-des {
+  color: #848484;
+  font-size: 1.5rem;
+  margin-bottom: 10px;
+  text-align: center;
+}
 
+.info-cart {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  margin-top: 20px;
+
+}
+
+.info-plus {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #f9f9f7;
+  border-radius: 20px;
+  width: 100px;
+  height: 35px;
+}
+
+.plus-input {
+  border-radius: 50%;
+  border: 1px solid #c0c0c0;
+  padding: 4px 7px;
+  border: none;
+  background-color: #c0c0c0;
+  margin: 0 5px;
+  font-size: 1.2rem;
+  cursor: pointer;
+  color: #ffffff;
+}
+
+.plus-input:nth-child(2) {
+  border-radius: 4px;
+  padding: 4px 7px;
+  border: none;
+  background-color: #f9f9f7;
+  color: #000000;
+}
+
+.info-btn {
+  width: 200px;
+  height: 50px;
+  background-color: #23ea2a;
+  border-radius: 50px;
+  color: #ffffff;
+  font-size: 1.3rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
+  border: none;
+  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
+  cursor: pointer;
+  transition: background-color 0.3s, box-shadow 0.3s;
+}
+
+.info-btn:hover {
+  background-color: #18ed1f;
+  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2);
 }
