--- a/src/components/UserProflle/UseProfile.scss
+++ b/src/components/UserProflle/UseProfile.scss
@@ -1,23 +1,20 @@
 .profile {
   display: flex;
+  flex-direction: column;
   align-items: center;
-  margin-bottom: 20px;
+  justify-content: center;
+  height:500px;
 }
 
 .profile-image {
-  width: 100px;
-  height: 100px;
-  border-radius: 50%;
-  overflow: hidden;
-  margin-right: 20px;
+  margin-bottom: 20px;
 }
 
 .profile-image img {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
+  width: 150px;
+  height: 150px;
+  border-radius: 50%;
 }
-
 .profile-details {
   font-family: Arial, sans-serif;
 }
